<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:text="@string/backButton"
        android:gravity="left"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/oneDimeHead"
        android:gravity="center"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/spinSideText" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:id="@+id/textView9"
            android:text="@string/oneDimeFFT"
            android:gravity="center"
            android:textSize="16sp"
            />

        <Space
            android:layout_width="16dp"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/textView10"
            android:text="@string/oneDimeFFTvalue"

            />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="6dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/oneDimeFFT2"
            android:textSize="16sp"
            />
        <Space
            android:layout_width="16dp"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/oneDimeFFT2value"
            />


    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart1"
            android:layout_width="match_parent"
            android:layout_height="250dp" />
    </RelativeLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart2"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            tools:visibility="visible" />

    </RelativeLayout>


</LinearLayout>


